[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contentsifter"
version = "0.1.0"
description = "Extract and search coaching call transcripts for content repurposing"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "anthropic>=0.39",
    "rich>=13.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]
pdf = [
    "weasyprint>=60.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "httpx>=0.27",
]

[project.scripts]
contentsifter = "contentsifter.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
